섹션 16. 인가 설정 실시간 반영하